[project]
name = "cvar-portfolio-rebalancer"
version = "0.1.0"
description = "CVaR-based portfolio rebalancer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2.28",
    "pytest>=7.0",
    "cvxpy>=1.4",
]

[tool.pytest.ini_options]
# Add project root to path so "rebalancer" can be imported when running pytest
pythonpath = ["."]
# Show print() output from tests
addopts = "-s"