[project]
name = "cvar-portfolio-rebalancer"
version = "0.1.0"
description = "CVaR-based portfolio rebalancer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2.28",
    "pytest>=7.0",
    "cvxpy>=1.4",
    "ecos>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-s"
markers = [
    "integration: tests that hit the live Yahoo Finance API (run with RUN_INTEGRATION=1)",
]